@@ -1,3 +1,3 @@
 use_thys ["Nominal_Examples"];
 
-setmp_noncritical quick_and_dirty true use_thys ["VC_Condition"]; 
+Unsynchronized.setmp quick_and_dirty true use_thys ["VC_Condition"];
